tests/baselines/reference/invalidStaticField.errors.txt
tests/cases/compiler/invalidStaticField.ts(1,28): error TS2339: Property 'NULL' does not exist on type '类为 B'.


==== tests/cases/compiler/invalidStaticField.ts (1 errors) ====
    class A { foo() { return B.NULL; } }
                               ~~~~
!!! error TS2339: Property 'NULL' does not exist on type '类为 B'.
    class B { static NOT_NULL = new B(); }